--- a/static/index.css
+++ b/static/index.css
@@ -50,7 +50,7 @@ body {
     margin-top: 10%;
 }
 
-/* @font-face kit by Fonts2u (https://fonts2u.com) */ @font-face {font-family:"Rapier Zero Outline Italic";src:url("Rapier_Zero_Outline_Italic.eot?") format("eot"),url("Rapier_Zero_Outline_Italic.woff") format("woff"),url("Rapier_Zero_Outline_Italic.ttf") format("truetype"),url("Rapier_Zero_Outline_Italic.svg#RapierZeroOutline-Italic") format("svg");font-weight:normal;font-style:normal;}
+/* @font-face kit by Fonts2u (https://fonts2u.com) */ @font-face {font-family:"Rapier Zero Outline Italic";src:url("Rapier_Zero_Outline_Italic.eot?") format("eot"),url("Rapier_Zero_Outline_Italic.woff") format("woff"),url("https://github.com/PhantomNetwork-Dev/Phantom-Official/raw/main/static/Rapier_Zero_Outline_Italic.ttf") format("truetype"),url("Rapier_Zero_Outline_Italic.svg#RapierZeroOutline-Italic") format("svg");font-weight:normal;font-style:normal;}
 
 
 .logo-wrapper h1 {
